<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wgcwgc</string>
    <string name="action_settings">Settings</string>
    
    <!-- main setting -->
    <string name="main_account">账号</string>
    <string name="main_account_hint">手机号/用户名/邮箱</string>
    <string name="main_password">密码</string>
    <string name="main_password_hint">密码</string>
    <string name="main_login">登录</string>
    <string name="main_register">注册</string>
    <string name="main_forget_password">忘记密码？</string>
    <string name="main_retrieve_account">找回账号！</string>
    <string name="main_remember_password">记住密码</string>
    <string name="main_auto_login">自动登录</string>
    

    <!-- app_ViewPager -->
    <string name="main_viewPager_dian">小圆点</string>
    <string name="main_viewPager_listView">请检查网络连接</string>

    <!-- app_recorder menu setting -->
    <string name="search">搜索本地音乐</string>
    <string name="clear_music_list">清除播放列表</string>
    <string name="recorder">录音</string>
    <string name="playLocalAudio">播放本地音频</string>
    <string name="playSetting">设置</string>    
    <string name="exit">退出</string>

    <!-- app_recorder interface -->
    <string name="Recording">Android Audio Recording Application</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="play">play</string>
    <string name="share">share</string>

    <!-- main interface -->
    <string name="main_child_button">幼儿</string>
    <string name="main_primary_button">小学</string>
    <string name="main_middle_button">中学</string>

    <!-- main_audioPlay -->
    <string name="hello_world"></string>
    <string name="main_audio_play">播放</string>
    <string name="main_audio_next">下一曲</string>
    <string name="main_audio_previous">上一曲</string>
    <string name="main_audio_curr_time">00:00</string>
    <string name="main_audio_total_time">00:00</string>
    <string name="main_audio_lyricsShow">找不到匹配的歌词</string>
    <string name="main_audio_record_start">开始</string>
    <string name="main_audio_record_play">停止</string>
    <string name="main_audio_record_pause">暂停</string>
    <string name="main_audio_record_share">分享</string>

</resources>