<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/play_audio_start"
        android:icon="@drawable/play_menu_start"
        android:showAsAction="always"
        android:title="@string/main_audio_record_start"/>
    <item
        android:id="@+id/play_audio_stop"
        android:icon="@drawable/play_menu_stop"
        android:showAsAction="always"
        android:title="@string/main_audio_record_stop"/>
    <item
        android:id="@+id/play_audio_paly"
        android:icon="@drawable/play_menu_play"
        android:showAsAction="always"
        android:title="@string/main_audio_record_play"/>
    <item
        android:id="@+id/play_audio_share"
        android:icon="@drawable/play_menu_share"
        android:showAsAction="always"
        android:title="@string/main_audio_record_share"/>

</menu>
