<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/control_main_listView"
        android:layout_width="wrap_content"
        android:layout_height="512dp"
        android:layout_above="@+id/tv_showName_control_main"
        android:background="#B8B8B8"
        android:singleLine="true" >
    </ListView>

    <LinearLayout
        android:id="@+id/linearLayout_controlProgress_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_audio_previous"
            android:onClick="previousLocalAudio"
            android:src="@drawable/locale_play_media_previous" />

        <ImageButton
            android:id="@+id/media_play_control_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_audio_play"
            android:onClick="playLocalAudio"
            android:src="@drawable/locale_play_media_play" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_audio_next"
            android:onClick="nextLocalAudio"
            android:src="@drawable/locale_play_media_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_controlSeekbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout_controlProgress_main"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1_curr_time_control_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/main_audio_curr_time" />

        <SeekBar
            android:id="@+id/seekBar_control_main"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView1_total_time_control_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/main_audio_total_time" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_showName_control_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout_controlSeekbar_main"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="@string/hello_world" />

</RelativeLayout>