<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp" >

    <EditText
        android:id="@+id/main_editText_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:drawablePadding="57dp"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/main_account_hint"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/main_editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_editText_account"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/main_password_hint"
        android:inputType="textPassword" >
    </EditText>

    <CheckBox
        android:id="@+id/main_checkBox_rememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_editText_account"
        android:layout_alignStart="@+id/main_editText_account"
        android:layout_alignTop="@+id/main_editText_password"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="57dp"
        android:text="@string/main_remember_password" />

    <CheckBox
        android:id="@+id/main_checkBox_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_editText_account"
        android:layout_alignRight="@+id/main_editText_account"
        android:layout_alignTop="@+id/main_editText_password"
        android:layout_centerVertical="true"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="57dp"
        android:text="@string/main_auto_login" />

    <Button
        android:id="@+id/main_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_editText_account"
        android:layout_alignStart="@+id/main_editText_account"
        android:layout_alignTop="@+id/main_checkBox_rememberPassword"
        android:layout_centerVertical="true"
        android:layout_marginLeft="77dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="57dp"
        android:onClick="login"
        android:text="@string/main_login" />

    <Button
        android:id="@+id/main_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_editText_account"
        android:layout_alignRight="@+id/main_editText_account"
        android:layout_alignTop="@+id/main_checkBox_rememberPassword"
        android:layout_centerVertical="true"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginTop="57dp"
        android:onClick="register"
        android:text="@string/main_register" />

    <TextView
        android:id="@+id/main_textView_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp" />

    <TextView
        android:id="@+id/main_textView_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_textView_show"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:textColor="@color/subtitle"
        android:textSize="27sp" />

</RelativeLayout>