<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.runcom.wgcwgc.audio.MainActivity" >
    <!-- android:paddingTop="@dimen/activity_vertical_margin"-->

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewPager"
        android:layout_width="match_parent"
        android:layout_height="111dp" />

    <LinearLayout
        android:id="@+id/point_layout"
        android:layout_width="match_parent"
        android:layout_height="7dip"
        android:layout_above="@+id/main_viewPager"
        android:layout_alignBottom="@id/main_viewPager"
        android:background="#B8B8B8"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/dian"
            android:contentDescription="@string/main_viewPager_dian" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:layout_marginStart="20dip"
            android:background="@drawable/dian"
            android:contentDescription="@string/main_viewPager_dian" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:layout_marginStart="20dip"
            android:background="@drawable/dian"
            android:contentDescription="@string/main_viewPager_dian" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_pagerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/point_layout"
        android:orientation="vertical" >

        <!-- 选项卡 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:weightSum="3" >

            <!-- tab1 -->

            <TextView
                android:id="@+id/tab1_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_child_button"
                android:textColor="#707070" />

            <!-- tab2 -->

            <TextView
                android:id="@+id/tab2_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_primary_button"
                android:textColor="#707070" />
            <!-- tab3 -->

            <TextView
                android:id="@+id/tab3_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_middle_button"
                android:textColor="#707070" />
        </LinearLayout>

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/down_line" />
        <!-- 选项卡内容显示区域 -->

        <android.support.v4.view.ViewPager
            android:id="@+id/third_vp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>