<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.runcom.wgcwgc.audio.MainActivity" >

    <!-- android:paddingTop="@dimen/activity_vertical_margin" -->

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewPager"
        android:layout_width="match_parent"
        android:layout_height="111dp" />

    <LinearLayout
        android:id="@+id/point_layout"
        android:layout_width="match_parent"
        android:layout_height="7dip"
        android:layout_above="@+id/main_viewPager"
        android:layout_alignBottom="@id/main_viewPager"
        android:background="#D7B998"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/main_point"
            android:contentDescription="@string/main_viewPager_dian" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:layout_marginStart="20dip"
            android:background="@drawable/main_point"
            android:contentDescription="@string/main_viewPager_dian" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:layout_marginStart="20dip"
            android:background="@drawable/main_point"
            android:contentDescription="@string/main_viewPager_dian" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_pagerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/point_layout"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/realtabcontent"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/tab_rg_menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mmfooter_bg"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/tab_rb_1"
                style="@style/tab_rb_style"
                android:checked="true"
                android:drawableTop="@drawable/tab_selector_weixing"
                android:text="@string/main_child_button" />

            <RadioButton
                android:id="@+id/tab_rb_2"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_selector_tongxunlu"
                android:text="@string/main_primary_button" />

            <RadioButton
                android:id="@+id/tab_rb_3"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_selector_faxian"
                android:text="@string/main_middle_button" />
        </RadioGroup>

        <android.support.v4.app.FragmentTabHost
            android:id="@android:id/tabhost"
            android:layout_width="0dp"
            android:layout_height="0dp" >
        </android.support.v4.app.FragmentTabHost>
    </LinearLayout>

</RelativeLayout>